# rsfetch

./: .gitignore  Cargo.toml  DISTRIBUTION.md  POSTS.md  README.md  ROADMAP.md  install.sh
.github/workflows/: deploy-docs.yml  release.yml
demo/: boot-image.tape  boot.tape  default.tape  fetch.tape  splash-image.tape
docs/: install-bin.sh  install.sh
installer/: Cargo.toml
installer/src/: main.rs
src/: animate.rs  cache.rs  color.rs  config.rs  logo.rs  main.rs  render.rs
src/boot/: mod.rs  timeline.rs
