[package]
name = "rsfetch"
version = "0.1.5"
edition = "2021"
description = "A fast system fetch display for your terminal"
license = "MIT"
repository = "https://github.com/gustafeden/rsfetch"
keywords = ["neofetch", "system", "fetch", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
blaeck = { git = "https://github.com/gustafeden/blaeck.git", tag = "v0.2.0" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
toml = "0.8"
libc = "0.2"
