[package]
name = "blaeckfetch"
version = "0.3.0"
edition = "2021"
description = "A fast system fetch display for your terminal"
license = "MIT"
repository = "https://github.com/gustafeden/blaeckfetch"
keywords = ["neofetch", "system", "fetch", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
blaeck = "0.2.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
toml = "0.8"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
